<resources>
    <string name="app_name">Sewing Machine Disease</string>
    <string name="label_login">Login</string>
    <string name="message_login">Silahkan gunakan akun yang anda miliki untuk dapat melanjutkan</string>
    <string name="label_phone_number">No. Handphone</string>
    <string name="label_password">Password</string>
    <string name="label_forgot_password">Lupa Kata Sandi Anda?</string>
    <string name="label_log_in">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_home">Home</string>
    <string name="label_profile">Profile</string>
    <string name="label_username">Username</string>
    <string name="label_log_out">Log Out</string>
    <string name="label_fullname">Nama Lengkap</string>
    <string name="label_npm">NPM</string>
    <string name="label_kode_solusi_s">Kode Solusi: %s</string>
    <string name="label_kode_aturan_s">Kode Aturan: %s</string>
    <string name="label_fakta_yang_dipicu_s">Fakta yang Dipicu: %s</string>
    <string name="label_selesai_diagnosis">Selesai Diagnosis</string>
    <string name="label_hasil_inferensi">Hasil Inferensi</string>
    <string name="message_rule">Aturan yang dipicu berdasarkan fakta yang diberikan.</string>
    <string name="label_pilih">Pilih</string>
    <string name="message_intro_app">Diagnosa penyakit mesin jahit, \npilih salah satu gejala yang ada:</string>
</resources>